--- a/receitas.html
+++ b/receitas.html
@@ -73,7 +73,7 @@
 
   <div class="grid">
     <div class="card">
-      <img src="c:\Users\Gabriel\OneDrive\Área de Trabalho\PratoJusto\overnightoats.jpg" alt="Overnight Oats">
+      <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_1:1/k%2FPhoto%2FRecipes%2F2025-02-overnight-oats%2Fovernight-oats-484g" alt="Overnight Oats">
       <div class="text">
         <h3>🥣 1. Overnight Oats</h3>
         <p>Misture aveia, leite ou iogurte, chia e frutas. Deixe na geladeira à noite e tenha um café da manhã prático e nutritivo.</p>
@@ -156,3 +156,4 @@
   <a href="index.PRATOjusto.html">⬅ Voltar para o site</a>
 </body>
 </html>
+
