--- a/direitos.html
+++ b/direitos.html
@@ -137,8 +137,9 @@
 
 <footer>
   <p>&copy; 2025 Prato Justo - Todos os direitos reservados</p>
-  <p><a href="index.html">Voltar à página inicial</a></p>
+  <p><a href="index.pratoJUSTO.html">Voltar à página inicial</a></p>
 </footer>
 
 </body>
 </html>
+
