--- a/receitas.html
+++ b/receitas.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="card">
-      <img src="c:\Users\Gabriel\OneDrive\Área de Trabalho\PratoJusto\Guacamole_1200x800.jpg" alt="Guacamole">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.allrecipes.com%2Frecipe%2F14064%2Feasy-guacamole%2F&psig=AOvVaw0KErPHlEhOyKmg7_uSFzq6&ust=1757886751865000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCIismOPc1o8DFQAAAAAdAAAAABAEhttps://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.allrecipes.com%2Frecipe%2F14064%2Feasy-guacamole%2F&psig=AOvVaw0KErPHlEhOyKmg7_uSFzq6&ust=1757886751865000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCIismOPc1o8DFQAAAAAdAAAAABAE" alt="Guacamole">
       <div class="text">
         <h3>🥑 2. Guacamole</h3>
         <p>Amasse abacate com limão, tomate, cebola e sal. Sirva com torradas integrais.</p>
@@ -156,4 +156,5 @@
   <a href="index.PRATOjusto.html">⬅ Voltar para o site</a>
 </body>
 </html>
+
 
