--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
 <body>
 
 <header>
-  <img src="c:\Users\Gabriel\Downloads\spaguetti.png" alt="Logo Prato Justo">
+  <img src="https://cdn-icons-png.flaticon.com/128/8494/8494729.png" alt="Logo Prato Justo">
   <h1>PRATO JUSTO</h1>
 </header>
 
 <div class="grid">
   <a href="receitas.html" class="card">
-    <img src="c:\Users\Gabriel\Downloads\carrot.png" alt="Cenoura">
+    <img src="https://cdn-icons-png.flaticon.com/128/1807/1807525.png" alt="Cenoura">
     <p>Receitas Saudáveis</p>
   </a>
 
   <a href="direitos.html" class="card">
-    <img src="c:\Users\Gabriel\Downloads\compliant.png" alt="Balança da Justiça">
+    <img src="https://cdn-icons-png.flaticon.com/128/6744/6744116.png" alt="Balança da Justiça">
     <p>Seus Direitos na Mesa</p>
   </a>
 
   <a href="dicas.html" class="card">
-    <img src="c:\Users\Gabriel\Downloads\kebab.png" alt="Kebab">
+    <img src="https://cdn-icons-png.flaticon.com/128/4310/4310157.png" alt="Kebab">
     <p>Dicas Legais e Nutricionais</p>
   </a>
 
   <a href="scanner.html" class="card">
-    <img src="c:\Users\Gabriel\Downloads\qr-code.png" alt="Scanner">
+    <img src="https://cdn-icons-png.flaticon.com/128/3639/3639208.png" alt="Scanner">
     <p>Scanner de Rótulos</p>
   </a>
 </div>
